--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Tela de Perfil
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-list>
+    <ion-item>
+      <ion-label>Nome:{{nome}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Email:{{email}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Idade:{{endereco}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
