--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,15 @@
     <ion-tab-bar slot="bottom">
         <ion-tab-button tab="tab1">
             <ion-icon name="briefcase"></ion-icon>
-            <ion-label>Menu</ion-label>
+            <ion-label>Login</ion-label>
         </ion-tab-button>
         <ion-tab-button tab="tab2">
             <ion-icon name="earth"></ion-icon>
-            <ion-label>Home</ion-label>
+            <ion-label>Cadastro</ion-label>
         </ion-tab-button>
         <ion-tab-button tab="tab3">
             <ion-icon name="person-sharp"></ion-icon>
             <ion-label>Perfil</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="tab3">
-            <ion-icon name="notifications-sharp"></ion-icon>
-            <ion-label>Notificações</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
